# IL-Risk

./: .env.example  .gitignore  README.md  pyproject.toml
data/processed/: liquidity_snapshots.parquet  slot0_snapshots.parquet
data/results/module_1/: liquidity_tick_spot_check.parquet  slot0_swap_price_check.parquet  volume_crosscheck.parquet
data/results/module_2/: ilr_metrics.parquet  lhhi_metrics.parquet  (+1 more)
reports/: Makefile  main.out  main.tex  main.toc  module1.tex  module2.tex  module3.tex  module4.tex  module5.tex
scripts/: data_extraction.py  module3.py
src/il_risk/: __init__.py  block_index.py  cli.py  extract_liquidity_events.py  extract_snapshots.py  extract_swap_mid_prices.py  extract_swaps.py  liquidity_analysis.py  rpc.py  schemas.py  slippage_analysis.py  swap_simulator.py  validate_module1.py
src/module1/: data_extraction.py  extract_liquidity_events.py  extract_snapshots.py  extract_swap_mid_prices.py  extract_swaps.py  validate_module1.py
src/module2/: TVL.py  concentration_metrics.py  liquidity_analysis.py  tiled_graph.py
src/module3/: slippage_analysis.py  swap_simulator.py
src/module4/: lp_analytics.py
src/module5/: hedge_backtest.py  hyperliquid_collector.py  lp_derivatives.py  lp_payoff.py
src/shared/: block_index.py  rpc.py  schemas.py  uniswap_events.py
tests/: test_extract_swap_mid_prices.py  test_hedge_backtest.py  test_lp_analytics.py  test_module1_parquet_schema.py  test_module5_derivatives.py  test_module5_hedge_backtest.py  test_rpc_errors.py  test_schemas.py  test_slippage_analysis.py  test_swap_simulator.py
(+21 files in other folders)
