[project]
name = "il-risk"
version = "0.1.0"
description = "EPFL FIN-413 Module 1 on-chain extraction for the Uniswap V3 USDC/WETH 0.05% pool."
requires-python = ">=3.10"
dependencies = [
    "eth-abi>=5.0",
    "eth-hash[pycryptodome]>=0.7",
    "eth-utils>=4.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "requests>=2.31",
    "tenacity>=8.2",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "polars>=0.20",
    "matplotlib>=3.8",
]

[project.scripts]
data-extraction = "il_risk.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/il_risk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
